--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,30 @@ h3 {
     padding: 60px 0;
     color:#000000ef;
 } 
+.project .projectBox {
+    border: 1px solid #e8e8e8;
+    padding: 20px 15px;
+    border-radius: 8px;
+}
+.project .projectBox h3 {
+    font-size: 20px;
+    text-align: center;
+}
+.project .projectBtn {
+    width: fit-content;
+    margin: 0 auto;
+}
+.project .projectBtn a {
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 3px;
+    background: #2c82ed;
+    padding: 8px 12px;
+    line-height: 12px;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #fff;
+}
 .project .linkBtn a {
     color: #fff;
 }
